maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: missing arguments for method ceil in object Math;
follow this method with `_' if you want to treat it as a partially applied function
  Math.ceil
       ^ShortestPathMaze:23: error: not found: value _X
    for(it <- 0 to _X.size -1){
                   ^ShortestPathMaze:36: error: value =- is not a member of Int
        _C_(4*it)=-1
                 ^ShortestPathMaze:45: error: value =- is not a member of Int
        _C_(4*it+1)=-1
                   ^ShortestPathMaze:54: error: value =- is not a member of Int
        _C_(4*it+2)=-1
                   ^ShortestPathMaze:63: error: value =- is not a member of Int
        _C_(4*it+3)=-1
                   ^